[27/07/2015] AB - API with new user/group Info from KP

--- a/api.cfg
+++ b/api.cfg
@@ -1,14 +1,22 @@
 {
-"apiIPaddress":"X.X.X.X",
-"apiPort": "XXXX",
-"mongoIP":"X.X.X.X",
-"mongoDBname":"XXX",
-"regionTTL":"14400",
-"hostTTL":"8460000",
-"vmTTL":"8460000",
-"serviceTTL":"14400",
-"h2hTTL":"8460000",
-"defaultTTL":"846000"
+"KPurl":"xxx",
+"KPusr":"xxx",
+"KPpwd":"xxx",
+"IDMurl":"xxx",
+"mysql_host": "xxx",
+"mysql_user":"xxx",
+"mysql_password":"xxx",
+"mysql_database":"xxx",
+"apiIPaddress":"0.0.0.0",
+"apiPort": "000",
+"mongoIP":"000",
+"mongoDBname":"xxx",
+"regionTTL":"000",
+"hostTTL":"000",
+"vmTTL":"000",
+"serviceTTL":"000",
+"h2hTTL":"000",
+"defaultTTL":"000"
 }
 
 
