Add trusted_app in api.cfg

--- a/api.cfg
+++ b/api.cfg
@@ -17,7 +17,8 @@
 "vmTTL":"000",
 "serviceTTL":"000",
 "h2hTTL":"000",
-"defaultTTL":"000"
+"defaultTTL":"000",
+"trusted_app" : ["app1", "app2"]
 }
 
 
