mysql conf read from configuration file

--- a/api.cfg
+++ b/api.cfg
@@ -8,6 +8,7 @@
 "mysql_user":"xxx",
 "mysql_password":"xxx",
 "mysql_database":"xxx",
+"mysql_port":"xxx",
 "apiIPaddress":"0.0.0.0",
 "apiPort": "000",
 "mongoIP":"000",
