Add idm option to config file

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 [mysql]
 user = root
 password = r00tme
-url = 127.0.0.1
+url = 172.28.128.3
 port = 3306
 dbname = monitoring
 
 [mongodb]
-url = 127.0.0.1
-port = 
+url = 172.28.128.3
+port = 27017
 dbname = orion
 
 [api]
@@ -28,4 +28,7 @@ user =
 password = 
 
 [idm]
-url = 
+token_url = http://cloud.lab.fiware.org:4730/v3/auth/tokens
+service_url = http://cloud.lab.fiware.org:4730/v3/OS-SCIM/v2/ServiceProviderConfigs
+username =
+password =
