Add function to authenticate

--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,7 @@ dbname = monitoring
 url = 172.28.128.3
 port = 27017
 dbname = orion
+collectionname = entities
 
 [api]
 version = 2.1.0
@@ -30,5 +31,10 @@ password =
 [idm]
 token_url = http://cloud.lab.fiware.org:4730/v3/auth/tokens
 service_url = http://cloud.lab.fiware.org:4730/v3/OS-SCIM/v2/ServiceProviderConfigs
+account_url = http://account.lab.fiware.org
 username =
 password =
+
+[oldmonitoring]
+url = 172.28.128.3
+port = 1027
