Add new config section regionNew
This section is mapped into a dict and it's used to check if a region has new monitoring or old one
In the future this commit, and this function should be removed (when all regions will have new monitoring)

--- a/config.ini
+++ b/config.ini
@@ -38,3 +38,20 @@ password =
 [oldmonitoring]
 url = 172.28.128.3
 port = 1027
+
+[regionNew]
+PiraeusU = False
+SophiaAntipolis = False
+PiraeusN = False
+Zurich = False
+Prague = False
+Poznan = False
+Gent = False
+SaoPaulo = False
+Spain2 = True
+Lannion2 = False
+Karlskrona2 = False
+Budapest2 = False
+Trento = False
+Crete = False
+Trento2 = False
