New config file approach
*The config file is converted in a map and install on bottle app in function config_to_dict
*select_monitoring_to_forward a function that return the nodejs old monitoring based on the fact that the region has old or new monitoring system

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,23 @@
+#Use same parameters as MySQLPlugin bottle plugin needs
+#https://github.com/tg123/bottle-mysql/blob/master/bottle_mysql.py
 [mysql]
-user = root
-password = r00tme
-url = 172.28.128.3
-port = 3306
+dbuser = root
+dbpass = r00tme
+dbhost = 172.28.128.3
+dbport = 3306
 dbname = monitoring
 
 [mongodb]
-url = 172.28.128.3
-port = 27017
-dbname = orion
+uri = mongodb://127.0.0.1:27017
+db = orion
 collectionname = entities
+json_mongo = True
+
+[mongodbOld]
+uri = mongodb://127.0.0.1:27017
+db = orion
+collectionname = entities
+json_mongo = True
 
 [api]
 version = 2.1.0
@@ -36,8 +44,12 @@ username =
 password =
 
 [oldmonitoring]
-url = 172.28.128.3
+url = 127.0.0.1
 port = 1027
+
+[newmonitoring]
+url = 127.0.0.1
+port = 
 
 [regionNew]
 PiraeusU = False
@@ -55,3 +67,4 @@ Budapest2 = False
 Trento = False
 Crete = False
 Trento2 = False
+Volos = False
