Add mongoDB port from configuration file on nodeJs

--- a/api.cfg
+++ b/api.cfg
@@ -13,6 +13,7 @@
 "apiPort": "000",
 "mongoIP":"000",
 "mongoDBname":"xxx",
+"mongoPort":"xxx",
 "regionTTL":"000",
 "hostTTL":"000",
 "vmTTL":"000",
