Add/Sort few regions on default configuration file

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -60,12 +60,12 @@ Prague = False
 Poznan = False
 Gent = False
 SaoPaulo = False
+Spain = False
 Spain2 = True
 Lannion2 = False
 Karlskrona2 = False
 Budapest2 = False
-Trento = False
 Crete = False
+Trento = False
 Trento2 = False
 Volos = False
-Trento = False
