--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -60,12 +60,11 @@ Prague = False
 Poznan = False
 Gent = False
 SaoPaulo = False
-Spain = False
-Spain2 = True
-Lannion2 = False
+Spain2 = False
 Karlskrona2 = False
-Budapest2 = False
-Crete = False
 Trento = False
+Crete = False
 Trento2 = False
 Volos = False
+Lannion2 = False
+Budapest2 = False
