Switch region Spain2 to new monitoring

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -57,7 +57,7 @@ SophiaAntipolis = False
 Prague = False
 Poznan = False
 SaoPaulo = False
-Spain2 = False
+Spain2 = True
 Trento = False
 Crete = False
 Volos = False
