Switch region from Trento to Trento2

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -58,7 +58,7 @@ Prague = False
 Poznan = False
 SaoPaulo = False
 Spain2 = True
-Trento = False
+Trento2 = False
 Crete = False
 Volos = False
 Lannion2 = False
