Add support for distributing package

--- a/monitoringHisto/monitoringHisto/conf/config.ini
+++ b/monitoringHisto/monitoringHisto/conf/config.ini
@@ -5,8 +5,16 @@ dbhost = dbhost
 dbport = dbport
 dbname = dbname
 
-[monascaAPI]
-secure = False
-uri = endpoint.to.your.monasca.api
+[profile]
 user = monascauser
 password = monascapassword
+tenant = monascatenant
+
+[monasca]
+secure = False
+uri = endpoint.to.your.monasca.api
+
+[keystone]
+secure = False
+api_version = api_version
+uri = endpoint.to.your.keystone.api
