--- a/monitoringHisto/requirements.txt
+++ b/monitoringHisto/requirements.txt
@@ -1,3 +1,45 @@
-MySQL-python==1.2.5
-SQLAlchemy==1.0.12
+Babel==2.3.4
 configparser==3.3.0.post2
+debtcollector==1.4.0
+enum34==1.1.6
+eventlet==0.19.0
+fasteners==0.14.1
+funcsigs==1.0.2
+greenlet==0.4.9
+iso8601==0.1.11
+Jinja2==2.8
+keystoneauth1==2.6.0
+MarkupSafe==0.23
+monotonic==1.1
+msgpack-python==0.4.7
+MySQL-python==1.2.5
+netaddr==0.7.18
+netifaces==0.10.4
+oslo.concurrency==3.8.0
+oslo.config==3.9.0
+oslo.context==2.3.0
+oslo.i18n==3.6.0
+oslo.log==3.7.0
+oslo.middleware==3.10.0
+oslo.serialization==2.6.0
+oslo.service==1.10.0
+oslo.utils==3.10.0
+Paste==2.0.3
+PasteDeploy==1.5.2
+pbr==1.9.1
+positional==1.1.0
+prettytable==0.7.2
+python-dateutil==2.5.3
+python-keystoneclient==3.0.0
+python-monascaclient==1.0.30
+pytz==2016.4
+PyYAML==3.11
+repoze.lru==0.6
+requests==2.10.0
+retrying==1.3.3
+Routes==2.3.1
+six==1.10.0
+SQLAlchemy==1.0.12
+stevedore==1.13.0
+WebOb==1.6.0
+wrapt==1.10.8
