List of regions read from global config file - support for many regions read from global conf file on monitoringHisto - regions list read from global file on monitoringProxy

--- a/monitoringHisto/monitoringHisto/conf/config.ini
+++ b/monitoringHisto/monitoringHisto/conf/config.ini
@@ -18,3 +18,6 @@ uri = endpoint.to.your.monasca.api
 secure = False
 api_version = api_version
 uri = endpoint.to.your.keystone.api
+
+[mainconfig]
+path = path/to/main_config/config.ini
