--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -49,19 +49,7 @@ port = 1027
 
 [newmonitoring]
 url = 127.0.0.1
-port = 
+port = 1028
 
-[regionNew]
-PiraeusU = False
-SophiaAntipolis = False
-Prague = False
-Poznan = False
-SaoPaulo = False
-Spain2 = True
-Trento2 = False
-Crete = False
-Volos = False
-Lannion2 = False
-Budapest2 = False
-Zurich = False
-#SpainTenerife = False
+[mainconfig]
+path = path/to/main_config/config.ini
