Exclude region list from config file

--- a/monitoringHisto/monitoringHisto/conf/config.ini
+++ b/monitoringHisto/monitoringHisto/conf/config.ini
@@ -22,3 +22,7 @@ uri = endpoint.to.your.keystone.api
 
 [mainconfig]
 path = path/to/main_config/config.ini
+
+[regionexclude]
+regions = []
+# eg: regions = ["region1", "region2"]
