Add filter of included services from conf file

--- a/monitoringHisto/monitoringHisto/conf/config.ini
+++ b/monitoringHisto/monitoringHisto/conf/config.ini
@@ -26,3 +26,7 @@ path = path/to/main_config/config.ini
 [regionexclude]
 regions = []
 # eg: regions = ["region1", "region2"]
+
+[servicesinclude]
+services = []
+# eg: services = ["compute", "networking", "block-storage", "image-service"]
