--- a/conf/config.ini
+++ b/conf/config.ini
@@ -10,5 +10,8 @@ Crete = False
 Volos = False
 Lannion2 = False
 Budapest2 = False
-Zurich = False
-#SpainTenerife = False
+Zurich2 = True
+#SpainTenerife = True
+#Vicenza = True
+#Zurich2 = True
+#Brittany = True
