--- a/conf/config.ini
+++ b/conf/config.ini
@@ -6,12 +6,12 @@ Poznan = False
 SaoPaulo = False
 Spain2 = True
 Trento2 = False
-Crete = False
+Crete = True
 Volos = False
 Lannion2 = False
 Budapest2 = False
 Zurich2 = True
 #SpainTenerife = True
-#Vicenza = True
+Vicenza = True
 #Zurich2 = True
 #Brittany = True
