Add implementation of the usageData report

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -26,10 +26,11 @@ listen_port = 8081
 trusted_app = [a, b, c]
 regionTTL = 000
 hostTTL = 000
-vmTTL = 000
+vmTTL = 3600
 serviceTTL = 000
 h2hTTL = 000
 defaultTTL = 000
+vmCheckActive = False
 
 [key]
 url = 
@@ -53,3 +54,7 @@ port = 1028
 
 [mainconfig]
 path = path/to/main_config/config.ini
+
+[usageData]
+obfuscate_tenant_id = True
+tenants_num = 10
