--- a/conf/config.ini
+++ b/conf/config.ini
@@ -11,7 +11,7 @@ Volos = False
 Lannion2 = False
 Budapest2 = False
 Zurich2 = True
-#SpainTenerife = True
+SpainTenerife = True
 Vicenza = True
 #Zurich2 = True
 #Brittany = True
