update region list - Rename wrong Zurich2 with ZurichS - Add Hannover region with new monitoring

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -13,5 +13,6 @@ Budapest2 = False
 Zurich2 = True
 SpainTenerife = True
 Vicenza = True
-#Zurich2 = True
+#ZurichS = True
 #Brittany = True
+Hannover = True
