Switch Volos to new monitoring

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -7,7 +7,7 @@ SaoPaulo = False
 Spain2 = True
 Trento2 = False
 Crete = True
-Volos = False
+Volos = True
 Lannion2 = False
 Budapest2 = False
 Zurich2 = True
