--- a/conf/config.ini
+++ b/conf/config.ini
@@ -8,7 +8,7 @@ Spain2 = True
 Trento2 = False
 Crete = True
 Volos = True
-Lannion2 = False
+Lannion3 = True
 Budapest2 = False
 Zurich2 = True
 SpainTenerife = True
