--- a/conf/config.ini
+++ b/conf/config.ini
@@ -16,3 +16,22 @@ Vicenza = True
 #ZurichS = True
 #Brittany = True
 Hannover = True
+
+[regionNames]
+PiraeusU = PiraeusU
+SophiaAntipolis2 = SophiaAntipolis
+Prague = Prague
+Poznan = Poznan
+SaoPaulo = SaoPaulo
+Spain2 = Spain
+Trento2 = Trento
+Crete = Crete
+Volos = Volos
+Lannion3 = Lannion
+Budapest2 = Budapest
+Zurich2 = Zurich
+SpainTenerife = SpainTenerife
+Vicenza = Vicenza
+#ZurichS = ZurichS
+#Brittany = Brittany
+Hannover = Hannover
