Add new region: Genoa

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -16,6 +16,7 @@ Vicenza = True
 #ZurichS = True
 #Brittany = True
 Hannover = True
+Genoa = True
 
 [regionNames]
 PiraeusU = PiraeusU
@@ -35,3 +36,4 @@ Vicenza = Vicenza
 #ZurichS = ZurichS
 #Brittany = Brittany
 Hannover = Hannover
+Genoa = Genoa
