Add way to exclude tenants uuid from usage data
- Feature from OPS-1340

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -58,3 +58,4 @@ path = path/to/main_config/config.ini
 [usageData]
 obfuscate_tenant_id = True
 tenants_num = 10
+blacklist_tenants = ["t1_uuid", "t2_uuid"]
