--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -31,6 +31,7 @@ serviceTTL = 000
 h2hTTL = 000
 defaultTTL = 000
 vmCheckActive = True
+regionsCephStorage = ["region1","region2","region3"]
 
 [key]
 url = 
