Switch Mexico to new monitoring

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -17,6 +17,7 @@ Vicenza = True
 #Brittany = True
 Hannover = True
 Genoa = True
+Mexico = True
 
 [regionNames]
 PiraeusU = PiraeusU
@@ -37,3 +38,4 @@ Vicenza = Vicenza
 #Brittany = Brittany
 Hannover = Hannover
 Genoa = Genoa
+Mexico = Mexico
