--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,5 +1,5 @@
 [regionNew]
-PiraeusU = False
+PiraeusU = True
 SophiaAntipolis2 = True
 Poznan = False
 SaoPaulo = False
@@ -8,7 +8,7 @@ Trento2 = False
 Crete = True
 Volos = True
 Lannion3 = True
-Budapest2 = False
+Budapest2 = True
 Zurich2 = True
 SpainTenerife = True
 Vicenza = True
