Drop support for old monitoring system in production
- Turn off following regions because still have the old monitoring: Poznan, SaoPaulo, Trento2

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,10 +1,10 @@
 [regionNew]
 PiraeusU = True
 SophiaAntipolis2 = True
-Poznan = False
-SaoPaulo = False
+#Poznan = False
+#SaoPaulo = False
 Spain2 = True
-Trento2 = False
+#Trento2 = False
 Crete = True
 Volos = True
 Lannion3 = True
@@ -21,10 +21,10 @@ Mexico = True
 [regionNames]
 PiraeusU = PiraeusU
 SophiaAntipolis2 = SophiaAntipolis
-Poznan = Poznan
-SaoPaulo = SaoPaulo
+#Poznan = Poznan
+#SaoPaulo = SaoPaulo
 Spain2 = Spain
-Trento2 = Trento
+#Trento2 = Trento
 Crete = Crete
 Volos = Volos
 Lannion3 = Lannion
