--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -26,6 +26,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
 #  config.vm.provision "shell", path: "/bin/bash deploy_machine.sh"
   config.vm.provision "shell" do |s|
+    s.privileged = false # Execute as vagrant user
     s.inline = "/bin/bash /vagrant/deploy_machine.sh "
   end
 
