--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -7,6 +7,20 @@ dbhost = 172.28.128.3
 dbport = 3306
 dbname = monitoring
 
+[profile]
+user = monascauser
+password = monascapassword
+tenant = monascatenant
+
+[monasca]
+secure = False
+uri = endpoint.to.your.monasca.api
+
+[keystone]
+secure = False
+api_version = api_version
+uri = endpoint.to.your.keystone.api
+
 [mongodb]
 uri = mongodb://127.0.0.1:27017
 db = orion
@@ -26,6 +40,7 @@ listen_port = 8081
 trusted_app = [a, b, c]
 regionTTL = 000
 hostTTL = 000
+hostsCacheTTL = 000
 vmTTL = 3600
 serviceTTL = 000
 h2hTTL = 000
@@ -60,3 +75,6 @@ path = path/to/main_config/config.ini
 obfuscate_tenant_id = True
 tenants_num = 10
 blacklist_tenants = ["t1_uuid", "t2_uuid"]
+
+[metrics]
+computeMetrics = ["metric1","metric2","metric3"]
