--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -38,6 +38,10 @@ version = 2.1.0
 listen_url = 0.0.0.0
 listen_port = 8081
 trusted_app = [a, b, c]
+admin_org = 000
+fed_man_org = 000
+sla_org = 000
+io_org = 000
 regionTTL = 000
 hostTTL = 000
 hostsCacheTTL = 000
