renamed utils and changed data returned by getRegion API when 404 error

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -35,3 +35,22 @@ Vicenza = Vicenza
 Hannover = Hannover
 Genoa = Genoa
 Mexico = Mexico
+
+[regionData]
+PiraeusU = ['GR',37.941991,23.652989]
+SophiaAntipolis2 = ['FR',43.62,7.04]
+#Poznan = Poznan
+#SaoPaulo = SaoPaulo
+Spain2 = ['ES',40.416775,-3.70379]
+#Trento2 = Trento
+Crete = ['GR',35.53,24.06]
+Volos = ['GR',39.35,22.95]
+Lannion3 = ['FR',48.755565,-3.464858]
+Budapest2 = ['HU',47.4984,19.0407]
+Zurich2 = ['CH',47.37,8.54]
+SpainTenerife = ['ES',28.2915637,-16.6291304]
+Vicenza = ['IT',45.5,11.5]
+#Brittany = Brittany
+Hannover = ['DE',52.3667,9.7167]
+Genoa = ['IT',44.4,8.9]
+Mexico = ['--',--,--]
