Added some conf vars

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -15,6 +15,7 @@ tenant = monascatenant
 [monasca]
 secure = False
 uri = endpoint.to.your.monasca.api
+timeout = 10
 
 [keystone]
 secure = False
@@ -51,6 +52,7 @@ h2hTTL = 000
 defaultTTL = 000
 vmCheckActive = True
 regionsCephStorage = ["region1","region2","region3"]
+debugMode = True
 
 [key]
 url = 
