Fixed bugs about mongodb exceptions. Added parameterized import to proxy_monitoring.py.

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -77,6 +77,9 @@ port = 1028
 [mainconfig]
 path = path/to/main_config/config.ini
 
+[projectpath]
+path = path/to/project/FIWARELab-monitoringAPI
+
 [usageData]
 obfuscate_tenant_id = True
 tenants_num = 10
