Timeout for mongo connections has been decreased

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -27,6 +27,7 @@ uri = mongodb://127.0.0.1:27017
 db = orion
 collectionname = entities
 json_mongo = True
+serverSelectionTimeoutMS = 10000
 
 [mongodbOld]
 uri = mongodb://127.0.0.1:27017
