refactor of the Monasca Collector code in order to retry the authentication to Keystone, when the token is no more valid.

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -21,6 +21,7 @@ timeout = 10
 secure = False
 api_version = api_version
 uri = endpoint.to.your.keystone.api
+authenticate_retry_wait_secs = 300
 
 [mongodb]
 uri = mongodb://127.0.0.1:27017
