add influxdb endpoint

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -17,6 +17,10 @@ secure = False
 uri = endpoint.to.your.monasca.api
 timeout = 10
 
+[influxdb]
+uri = endpoint.to.your.influxdb.api
+timeout = 10
+
 [keystone]
 secure = False
 api_version = api_version
