Fix bug when no data is available for the specified range
- Control cases when monasca return no data
- Add logging feature

--- a/monitoringHisto/monitoringHisto/conf/config.ini
+++ b/monitoringHisto/monitoringHisto/conf/config.ini
@@ -30,3 +30,7 @@ regions = []
 [servicesinclude]
 services = []
 # eg: services = ["compute", "networking", "block-storage", "image-service"]
+
+[logger]
+log_level = WARNING
+# eg: ERROR, WARNING, DEBUG. See: https://docs.python.org/3/library/logging.html#logging-levels
