Code improvement: CollectorInflux class created

--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -18,7 +18,11 @@ uri = endpoint.to.your.monasca.api
 timeout = 10
 
 [influxdb]
-uri = endpoint.to.your.influxdb.api
+host = host.of.your.influxdb.api
+port = port.of.your.influxdb.api
+dbname = name.of.influx.db
+user = influxuser
+password = influxpassword
 timeout = 10
 
 [keystone]
