--- a/conf/config.ini
+++ b/conf/config.ini
@@ -8,12 +8,14 @@ Spain2 = True
 Crete = True
 Volos = True
 Lannion3 = True
+Lannion4 = True
 Budapest2 = True
 Zurich2 = True
 Vicenza = True
-#Brittany = True
+Brittany = True
 Genoa = True
 Mexico = True
+Senegal = True
 
 [regionNames]
 PiraeusU = PiraeusU
@@ -25,12 +27,14 @@ Spain2 = Spain
 Crete = Crete
 Volos = Volos
 Lannion3 = Lannion
+Lannion4 = Lannion
 Budapest2 = Budapest
 Zurich2 = Zurich
 Vicenza = Vicenza
-#Brittany = Brittany
+Brittany = Brittany
 Genoa = Genoa
 Mexico = Mexico
+Senegal = Senegal
 
 [regionData]
 PiraeusU = ["GR",37.941991,23.652989]
@@ -42,9 +46,11 @@ Spain2 = ["ES",40.416775,-3.70379]
 Crete = ["GR",35.53,24.06]
 Volos = ["GR",39.35,22.95]
 Lannion3 = ["FR",48.755565,-3.464858]
+Lannion4 = ["FR",48.755594,-3.465480]
 Budapest2 = ["HU",47.4984,19.0407]
 Zurich2 = ["CH",47.37,8.54]
 Vicenza = ["IT",45.5,11.5]
-#Brittany = Brittany
+Brittany = ["FR",48.754905,-3.458504]
 Genoa = ["IT",44.4,8.9]
 #Mexico = ['--',--,--]
+Senegal = ["SN",14.711872,-17.471161]
