--- a/conf/config.ini
+++ b/conf/config.ini
@@ -7,7 +7,7 @@ Spain2 = True
 #Trento2 = False
 Crete = True
 Volos = True
-Lannion3 = True
+#Lannion3 = True
 Lannion4 = True
 Budapest2 = True
 Zurich2 = True
@@ -26,7 +26,7 @@ Spain2 = Spain
 #Trento2 = Trento
 Crete = Crete
 Volos = Volos
-Lannion3 = Lannion
+#Lannion3 = Lannion
 Lannion4 = Lannion
 Budapest2 = Budapest
 Zurich2 = Zurich
@@ -45,7 +45,7 @@ Spain2 = ["ES",40.416775,-3.70379]
 #Trento2 = Trento
 Crete = ["GR",35.53,24.06]
 Volos = ["GR",39.35,22.95]
-Lannion3 = ["FR",48.755565,-3.464858]
+#Lannion3 = ["FR",48.755565,-3.464858]
 Lannion4 = ["FR",48.755594,-3.465480]
 Budapest2 = ["HU",47.4984,19.0407]
 Zurich2 = ["CH",47.37,8.54]
