Regions API, region API, hosts API and host API refactored in order to get data from Monasca and Influx.

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -16,6 +16,7 @@ Brittany = True
 Genoa = True
 Mexico = True
 Senegal = True
+Wroclaw = True
 
 [regionNames]
 PiraeusU = PiraeusU
@@ -35,6 +36,7 @@ Brittany = Brittany
 Genoa = Genoa
 Mexico = Mexico
 Senegal = Senegal
+Wroclaw = Wroclaw
 
 [regionData]
 PiraeusU = ["GR",37.941991,23.652989]
@@ -52,5 +54,6 @@ Zurich2 = ["CH",47.37,8.54]
 Vicenza = ["IT",45.5,11.5]
 Brittany = ["FR",48.754905,-3.458504]
 Genoa = ["IT",44.4,8.9]
-#Mexico = ['--',--,--]
+Mexico = ['MX',21.8951492,-102.3518401]
 Senegal = ["SN",14.711872,-17.471161]
+Wroclaw = ["PL",51.1,17.0]
