Fixed a bug that caused the forked Monasca collectors to reauthenticate to Keystone after 1 hour, every 5 minutes. The parent collector had to reauthenticate

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -54,6 +54,6 @@ Zurich2 = ["CH",47.37,8.54]
 Vicenza = ["IT",45.5,11.5]
 Brittany = ["FR",48.754905,-3.458504]
 Genoa = ["IT",44.4,8.9]
-Mexico = ['MX',21.8951492,-102.3518401]
+Mexico = ["MX",21.8951492,-102.3518401]
 Senegal = ["SN",14.711872,-17.471161]
 Wroclaw = ["PL",51.1,17.0]
