--- a/monitoringProxy/config.ini
+++ b/monitoringProxy/config.ini
@@ -30,6 +30,7 @@ secure = False
 api_version = api_version
 uri = endpoint.to.your.keystone.api
 authenticate_retry_wait_secs = 300
+token_ttl = 3600
 
 [mongodb]
 uri = mongodb://127.0.0.1:27017
