minor improvements and added SaoPaulo

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -2,7 +2,7 @@
 PiraeusU = True
 SophiaAntipolis2 = True
 #Poznan = False
-#SaoPaulo = False
+SaoPaulo = True
 Spain2 = True
 #Trento2 = False
 Crete = True
@@ -22,7 +22,7 @@ Wroclaw = True
 PiraeusU = PiraeusU
 SophiaAntipolis2 = SophiaAntipolis
 #Poznan = Poznan
-#SaoPaulo = SaoPaulo
+SaoPaulo = SaoPaulo
 Spain2 = Spain
 #Trento2 = Trento
 Crete = Crete
@@ -42,7 +42,7 @@ Wroclaw = Wroclaw
 PiraeusU = ["GR",37.941991,23.652989]
 SophiaAntipolis2 = ["FR",43.62,7.04]
 #Poznan = Poznan
-#SaoPaulo = SaoPaulo
+SaoPaulo = ["BR",23.33,46.38]
 Spain2 = ["ES",40.416775,-3.70379]
 #Trento2 = Trento
 Crete = ["GR",35.53,24.06]
