fixed saoPaulo coordinates

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -42,7 +42,7 @@ Wroclaw = Wroclaw
 PiraeusU = ["GR",37.941991,23.652989]
 SophiaAntipolis2 = ["FR",43.62,7.04]
 #Poznan = Poznan
-SaoPaulo = ["BR",23.33,46.38]
+SaoPaulo = ["BR",-23.55,-46.633333]
 Spain2 = ["ES",40.416775,-3.70379]
 #Trento2 = Trento
 Crete = ["GR",35.53,24.06]
