added Poznan node

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,7 +1,7 @@
 [regionNew]
 PiraeusU = True
 SophiaAntipolis2 = True
-#Poznan = False
+Poznan = True
 SaoPaulo = True
 Spain2 = True
 #Trento2 = False
@@ -21,7 +21,7 @@ Wroclaw = True
 [regionNames]
 PiraeusU = PiraeusU
 SophiaAntipolis2 = SophiaAntipolis
-#Poznan = Poznan
+Poznan = Poznan
 SaoPaulo = SaoPaulo
 Spain2 = Spain
 #Trento2 = Trento
@@ -41,7 +41,7 @@ Wroclaw = Wroclaw
 [regionData]
 PiraeusU = ["GR",37.941991,23.652989]
 SophiaAntipolis2 = ["FR",43.62,7.04]
-#Poznan = Poznan
+Poznan = ["PL",52.4065835,16.9521191]
 SaoPaulo = ["BR",-23.556879,-46.730223]
 Spain2 = ["ES",40.416775,-3.70379]
 #Trento2 = Trento
